--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "morgan": "^1.10.0",
