Load files, but only english + no space

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,23 @@ dist
 
 # TernJS port file
 .tern-port
+public/music/02._Donaukinder.mp3
+public/music/02.Z_eit.mp3
+public/music/03._VTOPIA.mp3
+public/music/AC-Slater-Bass-Inside.mp3
+public/music/Angst.mp3
+public/music/Believe.mp3
+public/music/Blut.mp3
+public/music/Ð±ÑÑÐ·.mp3
+public/music/Ð¢ÐµÑÐ½Ð¾Ð¤Ð¸Ð½Ð°Ð».mp3
+public/music/ÑÐ°ÐºÑÐµÐ±Ðµ.mp3
+public/music/Tattoo.mp3
+public/music/temp/02.Zit.mp3
+public/music/temp/dsds/ttemp_dfdf.mp3
+public/music/temp/dsds/еуьз2/1_2_3_4_.mp3
+public/music/tteell/02.Z__iui_dddei_t.mp3
+public/music/02.Z_eit.mp3
+public/music/temp/02.Zit.mp3
+public/music/temp/dsds/ttemp_dfdf.mp3
+public/music/temp/dsds/еуьз2/1_2_3_4_.mp3
+public/music/tteell/02.Z__iui_dddei_t.mp3
