--- a/package.json
+++ b/package.json
@@ -19,14 +19,20 @@
   "homepage": "https://github.com/Ha1f15ch/BIG#readme",
   "dependencies": {
     "async": "^3.2.4",
+    "aws-sdk": "^2.1272.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
+    "jsdom": "^20.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "pug": "^3.0.2",
     "router": "^1.3.7"
   },
