--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,6 @@ public/music/temp/02.Zit.mp3
 public/music/temp/dsds/ttemp_dfdf.mp3
 public/music/temp/dsds/еуьз2/1_2_3_4_.mp3
 public/music/tteell/02.Z__iui_dddei_t.mp3
+
+public/music
+
