--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./bin/www",
-    "Dstart": "nodemon ./bin/www"
+    "s": "nodemon ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -38,6 +38,6 @@
     "router": "^1.3.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.22"
   }
 }
