--- a/package.json
+++ b/package.json
@@ -7,17 +7,24 @@
   },
   "dependencies": {
     "async": "^3.2.4",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
+    "express-fileupload": "^1.4.0",
+    "formidable": "^3.5.0",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.1",
     "method-override": "^3.0.0",
     "mongoose": "^7.3.1",
     "morgan": "~1.9.1",
+    "nodemon": "^3.0.1",
+    "pug": "^3.0.2",
     "router": "^1.3.8",
+    "uuid": "^9.0.0",
     "winston": "^3.9.0"
   }
 }
